--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,8 @@
         <div class="col-md-8 col-12" id='portfolio-images'>
 
             <div class="work">
-                <a href="psychic-game/index.html">
-                    <img src="assets/images/zoltar-640-480.jpg" id="portfolio-image" class="img-fluid" alt="Psychic Game">
-                </a>
+                <a href="psychic/index.html">
+                    <img src="assets/images/zoltar-640-480.jpg" id="portfolio-image" class="img-fluid" alt="Psychic Game"></a>
 
                 <h3>The Psychic Game</h3>
             </div>
