--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact | Douglas Boyce</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("dboyce77@gmail.com");
+    })();
+
+    // User ID: user_JhdaW8xWTPXxbxZNFPQCs
+    //Access token: 3c45ab3f0acf3d772e4074850497c26e
+
+  </script>
+
 </head>
 
 <body>
 
   <header id="masthead">
-      <a href="index.html" id="logo">Douglas Boyce</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+    <a href="index.html" id="logo">Douglas Boyce</a>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
   <div id="main-container" class="container">
@@ -50,7 +62,7 @@
   <!-- footer -->
   <footer>
     <div class="container">
-      Douglas boyce &copy; 
+      Douglas boyce &copy;
     </div>
   </footer>
 </body>
