--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header id="masthead">
         <a href="index.html" id="logo">Douglas Boyce</a>
         <nav>
-            <a href="index.html">About</a>
+            <a href="#">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
