--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                 <h3>Giftastic</h3>
             </div>
             <div class="work">
-                <a href="crystal-collector/index.html">
+                <a href="unit-4-game/index.html">
                 <img src="assets/images/portfolio-img-3a.jpg" alt="Crystal collector"></a>
 
                 <h3>Crystal collector</h3>
