--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <h3>Crystal collector</h3>
             </div>
             <div class="work">
-                <a href="ISS-Tracker/index.html"><img src="assets/images/portfolio-img-4.jpg" alt="ISS Tracker"></a>
+                <a href="project1/index.html"><img src="assets/images/portfolio-img-4.jpg" alt="ISS Tracker"></a>
 
                 <h3>ISS Tracker</h3>
             </div>
