--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 
             <img src="assets/images/my_picture.jpg" class="auth-image" alt="Douglas Boyce">
 
-            <p>Here's a short bio of my background. If you need more information go to my website at:
-                <a href="https://dboyce77.github.io/douglasboyce/">Douglas Boyce Web Site</a>
-            </p>
+            <p>Here's a short bio of my background.</p>
             <p>I was born in Kansas City,Misouri. When I was nine years old, my family moved to Florida. I attended
                 elementary,
                 Middle School,and High School there. After graduating high school, I joined the US Army. After basic
