--- a/portfolio.html
+++ b/portfolio.html
@@ -26,25 +26,35 @@
             <h2>Portfolio</h2>
 
             <div class="work">
-                <a href="psychic-game/index.html"><img src="assets/images/portfolio-img-2.jpg" alt="Pyschic Game"></a>
+                <a href=" https://douglasboyce.github.io/psychic-game/" target="_blank"><img src="assets/images/portfolio-img-2.jpg" alt="Pyschic Game"></a>
 
                 <h3>Psychic Game</h3>
             </div>
             <div class="work">
-                <a href="giftastic/index.html"><img src="assets/images/portfolio-img-1.jpg" alt="Giftastic"></a>
+                <a href="https://douglasboyce.github.io/giftastic/" target="_blank"><img src="assets/images/portfolio-img-1.jpg" alt="Giftastic"></a>
 
                 <h3>Giftastic</h3>
             </div>
             <div class="work">
-                <a href="unit-4-game/index.html">
+                <a href="https://douglasboyce.github.io/unit-4-game/" target="_blank">
                 <img src="assets/images/portfolio-img-3a.jpg" alt="Crystal collector"></a>
 
                 <h3>Crystal collector</h3>
             </div>
             <div class="work">
-                <a href="project1/index.html"><img src="assets/images/portfolio-img-4.jpg" alt="ISS Tracker"></a>
+                <a href="https://douglasboyce.github.io/Project1/" target="_blank"><img src="assets/images/portfolio-img-4.jpg" alt="ISS Tracker"></a>
 
                 <h3>ISS Tracker</h3>
+            </div>
+            <!-- <div class="work">
+                <a href="https://youtu.be/F_-6QRwn8zU/" target="_blank"><img src="assets/images/portfolio-img-5.png" alt="LIRI Node App"></a>
+
+                <h3>LIRI Node App</h3>
+            </div> -->
+            <div class="work">
+                <a href="#" target="_blank"><img src="assets/images/portfolio-img-6.jpg" alt="Bamazon-CLI"></a>
+
+                <h3>Bamazon-CLI</h3>
             </div>
 
         </section>
@@ -52,7 +62,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="footer">
             <h3>Douglas Boyce</h3>2018 &copy;
         </div>
     </footer>
